[project]
name="simes"
version="0.1.0"
authors = [
    {name = "Pablo Ibáñez-Freire", email = "p.ibanez.fre@gmail.com"},
]
description = "simes, simple encrypted socket"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]

dependencies = []
